1. Fragment State Adapter 활용한 버전도 추가. 2. 앱 시작 시 선택해서 원하는 어댑터를 설정할 수 있음.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
     buildToolsVersion "30.0.1"
 
     defaultConfig {
-        applicationId "com.innodep.infinityviewpager"
+        applicationId "com.hongdroid.infinityviewpager"
         minSdkVersion 16
         targetSdkVersion 30
         versionCode 1
